search dropdown fix overlap

--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -21,6 +21,7 @@
     height: 20px;
     padding: 0px;
     margin: 0px;
+    margin-top: 2px;
 
 }
 
